tests/fail/0001_constant1.ec
cnst c3 : _ = [<: 'b=int>]. 
